--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-flask==1.1.1
-requests==2.22.0
-urllib3==1.25.7
+flask==1.1.2
+requests==2.23.0
+urllib3==1.25.9
 gunicorn==20.0.4
+numpy==1.18.4
+praw==7.0.0
+prawcore==1.3.0
+scipy==1.4.1
